--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -19,14 +19,15 @@
     color: #292929;
     text-decoration: none;
     padding: 0.5rem;
+    border-radius: 5px;
   }
   
   .nav-links a:hover,
   .nav-links a:active,
   .nav-links a.active {
-    background: #f8df00;
+    background: #ffffff;
     border-color: #292929;
-    color: #292929;
+    color: #000000;
   }
   
   .nav-links button {
@@ -36,6 +37,7 @@
     background: transparent;
     padding: 0.5rem;
     font: inherit;
+    border-radius: 5px;
   }
   
   .nav-links button:focus {
@@ -70,7 +72,7 @@
     
     .nav-links button:hover,
     .nav-links button:active {
-      background: #f8df00;
-      color: #292929;
+      background: #ff4a4a;
+      color: #ffffff;
     }
   }
