--- a/src/user/components/UserItem.css
+++ b/src/user/components/UserItem.css
@@ -11,8 +11,9 @@
     height: 100%;
     text-decoration: none;
     padding: 1rem;
-    color: white;
-    background: #292929;
+    color: darkblue;
+    background: #ffffff;
+    border-radius: 6px;
 }
 
 .user-item a:hover,
@@ -33,8 +34,7 @@
 .user-item__info h2{
     font-size: 1.5rem;
     margin: 0 0 0.5rem 0;
-    font-weight: normal;
-    color: #ffd900;
+    color: darkblue;
 }
 
 .user-item:hover h2,
@@ -46,4 +46,5 @@
 
 .user-item__info h3{
     margin: 0;
+    font-weight: normal;
 }
